feat(cluster): ✨ 重构集群用户组服务并添加DTO转换层
重构ClusterUserGroupService及相关组件，引入DTO/VO模式实现分层架构

- 新增ClusterUserGroupDTO/ClusterGroupDTO等数据传输对象
- 添加ClusterUserGroupConverter等转换器组件
- 重构服务层使用DTO代替直接操作Entity
- 完善Mapper层查询方法
- 更新Controller适配DTO模式
- 添加详细方法注释及类型常量

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>